rust/test/former/all/wtools_bad_attr.stderr
error: Unknown attribute #[defaultx(31)]
 --> ../../../rust/test/former/all/wtools_bad_attr.rs:6:3
  |
6 |   #[ defaultx( 31 ) ]
  |   ^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `defaultx` in this scope
 --> ../../../rust/test/former/all/wtools_bad_attr.rs:6:6
  |
6 |   #[ defaultx( 31 ) ]
  |      ^^^^^^^^ help: a derive helper attribute with a similar name exists: `default`
